fixed minor issues with alignment

--- a/src/styles/blocks/contac-us.scss
+++ b/src/styles/blocks/contac-us.scss
@@ -1,5 +1,6 @@
 .contact-us {
   @include page-grid;
+  align-items: start;
 
   &__title {
     grid-column: 1/-1;
@@ -35,7 +36,7 @@
       color: $contact-us-title-color;
       font-size: 14px;
       font-weight: 400;
-      line-height: 20;
+      line-height: 20px;
     }
 
     &-text {
