--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -15,7 +15,7 @@
     font-family: "Space Mono", monospace;
     font-size: 14px;
     font-weight: 400;
-    line-height: 20;
+    line-height: 20px;
 
     &::placeholder {
       color: $form-placeholder-text-color;
