--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -45,7 +45,7 @@
       display: inline;
       position: absolute;
       white-space: nowrap;
-      right: 79px;
+      right: 25px;
 
       color: $main-color-txt;
       font-size: 12px;
